--- a/.settings/org.eclipse.wst.common.component
+++ b/.settings/org.eclipse.wst.common.component
@@ -5,6 +5,9 @@
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/java"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/resources"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/test/java"/>
+        <dependent-module archiveName="DISP-MELM-UTILS-1.0.0.jar" deploy-path="/WEB-INF/lib" handle="module:/resource/DISP-MELM-UTILS/DISP-MELM-UTILS">
+            <dependency-type>uses</dependency-type>
+        </dependent-module>
         <property name="context-root" value="MELM"/>
         <property name="java-output-path" value="/MELM/target/classes"/>
     </wb-module>
