add bootstraps for templating

--- a/src/main/webapp/css/style.css
+++ b/src/main/webapp/css/style.css
@@ -1,79 +1,1 @@
-body {
-  padding: 0;
-  margin: 10px 0 10px 0;
-  font-family: verdana, arial, sans-serif;
-  font-size: 12px;
-  color: #444444;
-  background: #FFFFFF;
-  text-align: center;
-}
-
-#wrapper {
-  width: 1250px;
-  text-align: left;
-  margin: 0 auto;
-  overflow: hidden;
-  background: #DDFFDD;
-  border: 1px solid black;
-  position: relative; 
-}
-
-#menu ul {
-  list-style-type: none;
-  line-height: 26px;
-  padding: 0 10px;
-  text-align: left;
-  border-width: 1px 0;
-  border-style: solid;
-  border-color: black;
-  background: #CECFBD;
-}
-
-#menu ul li {
-  display: inline;
-  padding: 5px;
-}
-
-#menu ul a {
-  font-variant: small-caps;
-  text-decoration: none;
-}
-
-#menu ul a:hover {
-  text-decoration: underline;
-}
-
-#footer {
-  font-size: 10px;
-  height: 20px;
-  margin-bottom: 10px;
-  border-width: 1px 0;
-  border-style: solid;
-  border-color: black;
-  background: #CECFBD;
-}
-
-#footer p.left {
-  font-weight: bold;
-  float: left;
-  padding: 0 10px;
-  line-height: 0px;
-  text-align: left;
-}
-
-#footer p.right {
-  float: right;
-  padding: 0 10px;
-  line-height: 0px;
-  text-align: right;
-}
-
-#content {
-  padding: 0px 10px 160px 10px;
-  min-height: 200px;
-}
-
-.error{
-  color: #FF0000;
-  font-style:italic;
-}
+body { padding-top: 70px; }
