fix ticket #3121 Pagination only with js not yet with java

--- a/src/main/webapp/css/sticky-footer-navbar.css
+++ b/src/main/webapp/css/sticky-footer-navbar.css
@@ -25,8 +25,13 @@ body {
 body > .container {
   padding: 60px 15px 0;
 }
-.container .text-muted {
+.container .left {
   margin: 20px 0;
+  float:left;
+}
+.container .right {
+  margin: 20px 0;
+  float:right;
 }
 
 #footer > .container {
