--- a/src/main/webapp/css/custom/style.css
+++ b/src/main/webapp/css/custom/style.css
@@ -1,12 +1,130 @@
-body { padding-top: 30px; }
+html {
+  position: relative;
+  min-height: 100%;
+}
+
+body {
+  padding-top: 25px;
+  /* Margin bottom by footer height */
+  margin-bottom: 100px;
+}
+
+#footer {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  /* Set the fixed height of the footer here */
+  height: 100px;
+  background-color: #000;
+  color: #fff;
+  height: auto !important;
+  margin-top:20px;
+}
+
+#logo {
+  height: 50px;
+}
+
 .container .left {
   margin: 20px 0;
-  float:left;
+  float: left;
 }
+
 .container .right {
   margin: 20px 0;
-  float:right;
+  float: right;
 }
+
 .pagination-centered {
-    text-align: center;
+  text-align: center;
+}
+
+nav.navbar {
+  background-color: #000;
+}
+
+.navbar-default .navbar-nav>.open>a,.navbar-default .navbar-nav>.open>a:hover,.navbar-default .navbar-nav>.open>a:focus {
+  background: #ddd;
+}
+
+.navbar-default a.navbar-brand {
+  color: #ffdc00;
+  padding: 0px 0px 0px 15px;
+  margin-right: 10px;
+}
+
+.navbar-default a.navbar-brand:hover {
+  color: #ffdc00;
+}
+
+.navbar-default a.navbar-brand img {
+  width: 50px;
+  height: 50px;
+}
+
+.navbar-default .navbar-nav>li>a {
+  color: #ffdc00;
+  height: 50px;
+}
+
+.navbar-default .navbar-nav>li>a:hover {
+  color: #ffdc00;
+  border-bottom: 3px solid #ffdc00;
+  padding-bottom: 3px;
+}
+
+.dropdown-menu>li>a:hover {
+  background: none;
+  text-decoration: underline;
+}
+
+.btn {
+  background: linear-gradient(to bottom, #000000 0%, #0F0F0F 49%, #000000 52%, #595959 100%) repeat scroll 0 0 rgba(0, 0, 0, 0) !important;
+  border: 2px solid #888888 !important;
+  border-radius: 0 !important;
+  box-shadow: 0 0 2px 1px #888888 !important;
+  color: #FFFFFF;
+  width: auto !important;
+  margin: 0px 5px !important;
+}
+
+.btn:hover {
+  color: #ffdc00;
+}
+
+#btn_login {
+  background: url("../../img/lock.png") no-repeat left, linear-gradient(to bottom, #000000 0%, #0F0F0F 49%, #000000 52%, #595959 100%) repeat
+    scroll 0 0 rgba(0, 0, 0, 0) !important;
+  padding-left: 34px;
+}
+
+#btn_logout {
+  background: url("../../img/logout.png") no-repeat 5px;
+}
+
+#btn_logout li a {
+  padding-left: 34px;
+}
+
+.btn-list {
+  background: url("../../img/list.png") no-repeat 5px, linear-gradient(to bottom, #444444 0%, #777777 49%, #444444 52%, #777777 100%) repeat
+    scroll 0 0 rgba(0, 0, 0, 0) !important;
+  padding-left: 40px;
+}
+
+.btn-add {
+  background: url("../../img/add.png") no-repeat 5px, linear-gradient(to bottom, #000000 0%, #0F0F0F 49%, #000000 52%, #595959 100%) repeat
+    scroll 0 0 rgba(0, 0, 0, 0) !important;
+  padding-left: 30px;
+}
+
+.btn-import {
+  background: url("../../img/import.png") no-repeat 5px, linear-gradient(to bottom, #000000 0%, #0F0F0F 49%, #000000 52%, #595959 100%) repeat
+    scroll 0 0 rgba(0, 0, 0, 0) !important;
+  padding-left: 40px;
+}
+
+.glyphicon:before {
+  color: #FFFFFF;
+  margin-right:10px;
 }
