add responsive classes

--- a/src/main/webapp/css/custom/style.css
+++ b/src/main/webapp/css/custom/style.css
@@ -39,44 +39,56 @@ body {
   text-align: center;
 }
 
-nav.navbar {
+nav#main_nav {
   background-color: #000;
 }
 
-.navbar-default .navbar-nav>.open>a,.navbar-default .navbar-nav>.open>a:hover,.navbar-default .navbar-nav>.open>a:focus {
+#main_nav .navbar-nav>.open>a,
+#main_nav .navbar-nav>.open>a:hover,
+#main_nav .navbar-nav>.open>a:focus {
   background: #ddd;
+  color: #000000;
 }
 
-.navbar-default a.navbar-brand {
+#main_nav a.navbar-brand {
   color: #ffdc00;
   padding: 0px 0px 0px 15px;
   margin-right: 10px;
 }
 
-.navbar-default a.navbar-brand:hover {
+#main_nav a.navbar-brand:hover {
   color: #ffdc00;
 }
 
-.navbar-default a.navbar-brand img {
+#main_nav a.navbar-brand img {
   width: 50px;
   height: 50px;
 }
 
-.navbar-default .navbar-nav>li>a {
+#main_nav .navbar-nav>li>a {
   color: #ffdc00;
   height: 50px;
 }
 
-.navbar-default .navbar-nav>li>a:hover {
+#main_nav .navbar-nav>li>a:hover {
   color: #ffdc00;
   border-bottom: 3px solid #ffdc00;
   padding-bottom: 3px;
 }
 
-.dropdown-menu>li>a:hover {
+#main_nav .dropdown-menu>li>a:hover {
   background: none;
   text-decoration: underline;
 }
+
+/* nav.row_nav { */
+/*   background-color: transparent; */
+/*   border:none; */
+/* } */
+
+/* nav.row_nav .navbar-collapse.in { */
+/*   border: 1px solid #ddd; */
+/* } */
 
 .btn {
   background: linear-gradient(to bottom, #000000 0%, #0F0F0F 49%, #000000 52%, #595959 100%) repeat scroll 0 0 rgba(0, 0, 0, 0) !important;
@@ -85,7 +97,7 @@ nav.navbar {
   box-shadow: 0 0 2px 1px #888888 !important;
   color: #FFFFFF;
   width: auto !important;
-  margin: 0px 5px !important;
+  margin: 0px 4px !important;
 }
 
 .btn:hover {
@@ -110,6 +122,7 @@ nav.navbar {
   background: url("../../img/list.png") no-repeat 5px, linear-gradient(to bottom, #444444 0%, #777777 49%, #444444 52%, #777777 100%) repeat
     scroll 0 0 rgba(0, 0, 0, 0) !important;
   padding-left: 40px;
+  height:36px;
 }
 
 .btn-add {
@@ -127,4 +140,8 @@ nav.navbar {
 .glyphicon:before {
   color: #FFFFFF;
   margin-right:10px;
+}
+
+.black, .black a {
+  color: #fff;
 }
