--- a/src/main/webapp/css/custom/style.css
+++ b/src/main/webapp/css/custom/style.css
@@ -18,7 +18,7 @@ body {
   background-color: #000;
   color: #fff;
   height: auto !important;
-  margin-top:20px;
+  margin-top: 20px;
 }
 
 #logo {
@@ -43,9 +43,7 @@ nav#main_nav {
   background-color: #000;
 }
 
-#main_nav .navbar-nav>.open>a,
-#main_nav .navbar-nav>.open>a:hover,
-#main_nav .navbar-nav>.open>a:focus {
+#main_nav .navbar-nav>.open>a,#main_nav .navbar-nav>.open>a:hover,#main_nav .navbar-nav>.open>a:focus {
   background: #ddd;
   color: #000000;
 }
@@ -89,7 +87,6 @@ nav#main_nav {
 /* nav.row_nav .navbar-collapse.in { */
 /*   border: 1px solid #ddd; */
 /* } */
-
 .btn {
   background: linear-gradient(to bottom, #000000 0%, #0F0F0F 49%, #000000 52%, #595959 100%) repeat scroll 0 0 rgba(0, 0, 0, 0) !important;
   border: 2px solid #888888 !important;
@@ -122,7 +119,7 @@ nav#main_nav {
   background: url("../../img/list.png") no-repeat 5px, linear-gradient(to bottom, #444444 0%, #777777 49%, #444444 52%, #777777 100%) repeat
     scroll 0 0 rgba(0, 0, 0, 0) !important;
   padding-left: 40px;
-  height:36px;
+  height: 36px;
 }
 
 .btn-add {
@@ -139,9 +136,35 @@ nav#main_nav {
 
 .glyphicon:before {
   color: #FFFFFF;
-  margin-right:10px;
+  margin-right: 10px;
 }
 
-.black, .black a {
+.black,.black a {
   color: #fff;
+}
+
+.icon-wrapper {
+  padding: 10px;
+  line-height: 1.4;
+  text-align: center;
+  border: 1px solid #fff;
+  background-color: #f9f9f9;
+  text-overflow: ellipsis;
+  overflow: hidden;
+  white-space: nowrap;
+}
+
+.icon>input[type=radio] {
+  display: none;
+}
+
+.icon>input[type=radio]+img {
+  cursor: pointer;
+  border-color: transparent;
+  border-width: 2px;
+  border-style: solid;
+}
+
+.icon_selected {
+  background-color: #ffdc00;
 }
