fix half of ticket #3097 Better error message handling

--- a/src/main/webapp/css/custom/style.css
+++ b/src/main/webapp/css/custom/style.css
@@ -152,6 +152,7 @@ nav#main_nav {
   text-overflow: ellipsis;
   overflow: hidden;
   white-space: nowrap;
+  cursor: pointer;
 }
 
 .icon>input[type=radio] {
