--- a/src/main/webapp/css/custom/style.css
+++ b/src/main/webapp/css/custom/style.css
@@ -1,82 +1,88 @@
 html {
-  position: relative;
-  min-height: 100%;
+	position: relative;
+	min-height: 100%;
 }
 
 body {
-  padding-top: 25px;
-  /* Margin bottom by footer height */
-  margin-bottom: 100px;
+	padding-top: 25px;
+	/* Margin bottom by footer height */
+	margin-bottom: 100px;
+}
+
+body.modal-open {
+	margin-left: auto;
+	margin-right: auto;
 }
 
 #footer {
-  position: absolute;
-  bottom: 0;
-  width: 100%;
-  /* Set the fixed height of the footer here */
-  height: 100px;
-  background-color: #000;
-  color: #fff;
-  height: auto !important;
-  margin-top: 20px;
+	position: absolute;
+	bottom: 0;
+	width: 100%;
+	/* Set the fixed height of the footer here */
+	height: 100px;
+	background-color: #000;
+	color: #fff;
+	height: auto !important;
+	margin-top: 20px;
 }
 
 #logo {
-  height: 50px;
+	height: 50px;
 }
 
 .container .left {
-  margin: 20px 0;
-  float: left;
+	margin: 20px 0;
+	float: left;
 }
 
 .container .right {
-  margin: 20px 0;
-  float: right;
+	margin: 20px 0;
+	float: right;
 }
 
 .pagination-centered {
-  text-align: center;
+	text-align: center;
 }
 
 nav#main-nav {
-  background-color: #000;
+	background-color: #000;
 }
 
-#main-nav .navbar-nav>.open>a,#main-nav .navbar-nav>.open>a:hover,#main-nav .navbar-nav>.open>a:focus {
-  background: #ddd;
-  color: #000000;
+#main-nav .navbar-nav>.open>a,#main-nav .navbar-nav>.open>a:hover,#main-nav .navbar-nav>.open>a:focus
+	{
+	background: #ddd;
+	color: #000000;
 }
 
 #main-nav a.navbar-brand {
-  color: #ffdc00;
-  padding: 0px 0px 0px 15px;
-  margin-right: 10px;
+	color: #ffdc00;
+	padding: 0px 0px 0px 15px;
+	margin-right: 10px;
 }
 
 #main-nav a.navbar-brand:hover {
-  color: #ffdc00;
+	color: #ffdc00;
 }
 
 #main-nav a.navbar-brand img {
-  width: 50px;
-  height: 50px;
+	width: 50px;
+	height: 50px;
 }
 
 #main-nav .navbar-nav>li>a {
-  color: #ffdc00;
-  height: 50px;
+	color: #ffdc00;
+	height: 50px;
 }
 
 #main-nav .navbar-nav>li>a:hover {
-  color: #ffdc00;
-  border-bottom: 3px solid #ffdc00;
-  padding-bottom: 3px;
+	color: #ffdc00;
+	border-bottom: 3px solid #ffdc00;
+	padding-bottom: 3px;
 }
 
 #main-nav .dropdown-menu>li>a:hover {
-  background: none;
-  text-decoration: underline;
+	background: none;
+	text-decoration: underline;
 }
 
 /* nav.row_nav { */
@@ -88,97 +94,102 @@ nav#main-nav {
 /*   border: 1px solid #ddd; */
 /* } */
 .btn {
-  background: linear-gradient(to bottom, #000000 0%, #0F0F0F 49%, #000000 52%, #595959 100%) repeat scroll 0 0 rgba(0, 0, 0, 0) !important;
-  border: 2px solid #888888 !important;
-  border-radius: 0 !important;
-  box-shadow: 0 0 2px 1px #888888 !important;
-  color: #FFFFFF;
-  width: auto !important;
-  margin: 0px 4px !important;
+	background: linear-gradient(to bottom, #000000 0%, #0F0F0F 49%, #000000 52%, #595959
+		100%) repeat scroll 0 0 rgba(0, 0, 0, 0) !important;
+	border: 2px solid #888888 !important;
+	border-radius: 0 !important;
+	box-shadow: 0 0 2px 1px #888888 !important;
+	color: #FFFFFF;
+	width: auto !important;
+	margin: 0px 4px !important;
 }
 
 .btn:hover {
-  color: #ffdc00;
+	color: #ffdc00;
 }
 
 #btn-login {
-  background: url("../../img/lock.png") no-repeat left, linear-gradient(to bottom, #000000 0%, #0F0F0F 49%, #000000 52%, #595959 100%) repeat
-    scroll 0 0 rgba(0, 0, 0, 0) !important;
-  padding-left: 34px;
+	background: url("../../img/lock.png") no-repeat left,
+		linear-gradient(to bottom, #000000 0%, #0F0F0F 49%, #000000 52%, #595959
+		100%) repeat scroll 0 0 rgba(0, 0, 0, 0) !important;
+	padding-left: 34px;
 }
 
 #btn-logout {
-  background: url("../../img/logout.png") no-repeat 5px;
+	background: url("../../img/logout.png") no-repeat 5px;
 }
 
 #btn-logout li a {
-  padding-left: 34px;
+	padding-left: 34px;
 }
 
 .btn-list {
-  background: url("../../img/list.png") no-repeat 5px, linear-gradient(to bottom, #444444 0%, #777777 49%, #444444 52%, #777777 100%) repeat
-    scroll 0 0 rgba(0, 0, 0, 0) !important;
-  padding-left: 40px;
-  height: 36px;
+	background: url("../../img/list.png") no-repeat 5px,
+		linear-gradient(to bottom, #444444 0%, #777777 49%, #444444 52%, #777777
+		100%) repeat scroll 0 0 rgba(0, 0, 0, 0) !important;
+	padding-left: 40px;
+	height: 36px;
 }
 
 .btn-add {
-  background: url("../../img/add.png") no-repeat 5px, linear-gradient(to bottom, #000000 0%, #0F0F0F 49%, #000000 52%, #595959 100%) repeat
-    scroll 0 0 rgba(0, 0, 0, 0) !important;
-  padding-left: 30px;
+	background: url("../../img/add.png") no-repeat 5px,
+		linear-gradient(to bottom, #000000 0%, #0F0F0F 49%, #000000 52%, #595959
+		100%) repeat scroll 0 0 rgba(0, 0, 0, 0) !important;
+	padding-left: 30px;
 }
 
 .btn-import {
-  background: url("../../img/import.png") no-repeat 5px, linear-gradient(to bottom, #000000 0%, #0F0F0F 49%, #000000 52%, #595959 100%) repeat
-    scroll 0 0 rgba(0, 0, 0, 0) !important;
-  padding-left: 40px;
+	background: url("../../img/import.png") no-repeat 5px,
+		linear-gradient(to bottom, #000000 0%, #0F0F0F 49%, #000000 52%, #595959
+		100%) repeat scroll 0 0 rgba(0, 0, 0, 0) !important;
+	padding-left: 40px;
 }
 
 .glyphicon:before {
-  color: #FFFFFF;
-  margin-right: 10px;
+	color: #FFFFFF;
+	margin-right: 10px;
 }
 
 .black,.black a {
-  color: #fff;
+	color: #fff;
 }
 
 .icon-wrapper {
-  padding: 10px;
-  line-height: 1.4;
-  text-align: center;
-  border: 1px solid #fff;
-  background-color: #f9f9f9;
-  text-overflow: ellipsis;
-  overflow: hidden;
-  white-space: nowrap;
-  cursor: pointer;
+	padding: 10px;
+	line-height: 1.4;
+	text-align: center;
+	border: 1px solid #fff;
+	background-color: #f9f9f9;
+	text-overflow: ellipsis;
+	overflow: hidden;
+	white-space: nowrap;
+	cursor: pointer;
 }
 
 .icon-wrapper-disabled {
-  cursor:initial;
+	cursor: initial;
 }
 
 .icon>input[type=radio] {
-  display: none;
+	display: none;
 }
 
 .icon>input[type=radio]+img {
-  cursor: pointer;
-  border-color: transparent;
-  border-width: 2px;
-  border-style: solid;
+	cursor: pointer;
+	border-color: transparent;
+	border-width: 2px;
+	border-style: solid;
 }
 
 .icon-selected {
-  background-color: #ffdc00;
+	background-color: #ffdc00;
 }
 
 .icon-disabled {
-  background-color: #cccccc;
-  opacity: 0.4;
+	background-color: #cccccc;
+	opacity: 0.4;
 }
 
 .icon-disabled>input[type=radio]+img {
-  opacity: 0.4;
+	opacity: 0.4;
 }
