--- a/src/main/webapp/css/custom/style.css
+++ b/src/main/webapp/css/custom/style.css
@@ -10,8 +10,8 @@ body {
 }
 
 body.modal-open {
-	margin-left: auto;
-	margin-right: auto;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 #footer {
@@ -190,4 +190,24 @@ nav#main-nav {
 
 .library-icons .btn {
   padding: 6px 0 6px 10px;
+}
+
+.anchor-wrapper {
+  margin-top: 10px;
+  border-radius: 7px;
+  position: relative;
+  background: #eeeeee;
+  width: 200px;
+  height: 200px;
+}
+
+.anchor {
+  background: #cccccc;
+  width: 40px;
+  height: 40px;
+  border: 0;
+}
+
+.anchor-selected {
+  background: #333333;
 }
