--- a/app/css/style.less
+++ b/app/css/style.less
@@ -95,8 +95,11 @@ nav#main-nav {
 /* nav.row_nav .navbar-collapse.in { */
 /*   border: 1px solid #ddd; */
 /* } */
+
+@gradient: linear-gradient(to bottom, #000000 0%, #0F0F0F 49%, #000000 52%, #595959 100%) repeat scroll 0 0 rgba(0, 0, 0, 0) !important;
+
 .btn {
-  background: linear-gradient(to bottom, #000000 0%, #0F0F0F 49%, #000000 52%, #595959 100%) repeat scroll 0 0 rgba(0, 0, 0, 0) !important;
+  background: @gradient;
   border: 2px solid #888888 !important;
   border-radius: 0 !important;
   box-shadow: 0 0 2px 1px #888888 !important;
@@ -109,14 +112,15 @@ nav#main-nav {
   color: @disp-yellow;
 }
 
+@base-url: "../../img";
+
 #btn-login {
-  background: url("../../img/lock.png") no-repeat left, linear-gradient(to bottom, #000000 0%, #0F0F0F 49%, #000000 52%, #595959 100%) repeat
-    scroll 0 0 rgba(0, 0, 0, 0) !important;
+  background: url("@{base-url}/lock.png") no-repeat left, @gradient;
   padding-left: 34px;
 }
 
 #btn-logout {
-  background: url("../../img/logout.png") no-repeat 5px;
+  background: url("@{base-url}/logout.png") no-repeat 5px;
 }
 
 #btn-logout li a {
@@ -124,21 +128,18 @@ nav#main-nav {
 }
 
 .btn-list {
-  background: url("../../img/list.png") no-repeat 5px, linear-gradient(to bottom, #000000 0%, #0F0F0F 49%, #000000 52%, #595959 100%) repeat
-    scroll 0 0 rgba(0, 0, 0, 0) !important;
+  background: url("@{base-url}/list.png") no-repeat 5px, @gradient;
   padding-left: 40px;
   height: 36px;
 }
 
 .btn-add {
-  background: url("../../img/add.png") no-repeat 5px, linear-gradient(to bottom, #000000 0%, #0F0F0F 49%, #000000 52%, #595959 100%) repeat
-    scroll 0 0 rgba(0, 0, 0, 0) !important;
+  background: url("@{base-url}/add.png") no-repeat 5px, @gradient;
   padding-left: 30px;
 }
 
 .btn-import {
-  background: url("../../img/import.png") no-repeat 5px, linear-gradient(to bottom, #000000 0%, #0F0F0F 49%, #000000 52%, #595959 100%) repeat
-    scroll 0 0 rgba(0, 0, 0, 0) !important;
+  background: url("@{base-url}/import.png") no-repeat 5px, @gradient;
   padding-left: 40px;
 }
 
@@ -201,7 +202,7 @@ nav#main-nav {
   background-color: #eeeeee !important;
   width: 215px;
   height: 197px;
-  background: url("../../img/ic_target.png") no-repeat 90px 85px;
+  background: url("@{base-url}/ic_target.png") no-repeat 90px 85px;
 }
 
 .anchor {
@@ -216,35 +217,35 @@ nav#main-nav {
 }
 
 .anchor-E {
-  background: url("../../img/anchor_E.png") no-repeat 3px;
+  background: url("@{base-url}/anchor_E.png") no-repeat 3px;
 }
 
 .anchor-N {
-  background: url("../../img/anchor_N.png") no-repeat 5px;
+  background: url("@{base-url}/anchor_N.png") no-repeat 5px;
 }
 
 .anchor-NE {
-  background: url("../../img/anchor_NE.png") no-repeat 0px;
+  background: url("@{base-url}/anchor_NE.png") no-repeat 0px;
 }
 
 .anchor-NW {
-  background: url("../../img/anchor_NW.png") no-repeat 0px;
+  background: url("@{base-url}/anchor_NW.png") no-repeat 0px;
 }
 
 .anchor-S {
-  background: url("../../img/anchor_S.png") no-repeat 5px;
+  background: url("@{base-url}/anchor_S.png") no-repeat 5px;
 }
 
 .anchor-SE {
-  background: url("../../img/anchor_SE.png") no-repeat 0px;
+  background: url("@{base-url}/anchor_SE.png") no-repeat 0px;
 }
 
 .anchor-SW {
-  background: url("../../img/anchor_SW.png") no-repeat 0px;
+  background: url("@{base-url}/anchor_SW.png") no-repeat 0px;
 }
 
 .anchor-W {
-  background: url("../../img/anchor_W.png") no-repeat 0px;
+  background: url("@{base-url}/anchor_W.png") no-repeat 0px;
 }
 
 .btn-file {
